# agentic-ai

./: .dockerignore  .env.local.example  .gitignore  PROJECT_MAINTENANCE.md  README.md  azure-pipelines-security.yml  datadog_agent_insights.json  deploy_dashboard.py  dev-hybrid.ps1  discovery_test_standalone.py  docker-compose.yml  help_test_output_v3.txt  help_test_output_v5.txt  help_test_output_v6.txt  help_test_output_v7.txt  migrate_db.py  test_docker_conn.py  test_err_str.py  test_help_api.py  test_kb_output.txt  test_kb_planner.py  test_kh_client.py  test_parse.py
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/core/: security_azure.py
backend/app/middleware/: auth.py
backend/app/routers/: clients.py  d365.py  mcp.py  models.py  plans.py
backend/app/schemas/: client.py
backend/app/services/: base_service.py  d365_service.py  mcp_helper.py  mcp_manager.py  mock_data.py  plan_executor.py
backend/app/tools/: assign_owner.py  lookup_client.py  update_stage.py
backend/plans/: client_onboarding_stage_update.yaml
backend/tests/: test_security.py
docs/: AI_Evaluation_Quality_Framework.md  AI_Observability_Strategy.md  Advanced_Security_Governance_Blueprint.md  Agentic_AI_Security_Compliance_Quality_Strategy.md  Guardrails_PII_Protection_Strategy.md  ai_augmented_development.md  architecture_brainstorming.md  architecture_review.md  azure-ad-security-plan.md  azure_openai_integration_plan.md  azure_openai_integration_walkthrough.md  d365_business_flows.md  d365_mcp_integration_plan.md  deployment_strategy.md  development_vs_deployment.md  frontend_integration_plan.md  implementation_plan.md  mcp_entitlements.md  ms_teams_integration_plan.md  offline_capability_push_notifications.md  ota_updates.md  productization_strategy.md  session_resume.md  startup.md  system_architecture.md  task_tracking.md  tasks.md  (+2 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
iis/: .env_source  Dockerfile  README.md  config.py  main.py  pyproject.toml  test_kh_mcp.py
iis/agents/: base.py  entitlements.py  executor.py  orchestrator.py  planner.py
iis/agents/domains/: __init__.py
iis/agents/domains/hr/: __init__.py  agent.py  config.yaml
iis/agents/domains/it_support/: __init__.py  agent.py  config.yaml
iis/agents/domains/onboarding/: __init__.py  agent.py  config.yaml
iis/agents/domains/pricing_assistant/: __init__.py  agent.py  config.yaml  wizard_state.py
iis/agents/domains/pricing_assistant/phases/: __init__.py  bu_branch.py  conversational_parser.py  core_fields.py  crm_context.py
iis/agents/domains/pricing_assistant/tests/: __init__.py  test_wizard_state.py
iis/agents/domains/sales/: __init__.py  agent.py  config.yaml
iis/core/: auth.py  base_auth.py  base_client.py  config.py  context.py  database.py  mcp_dashboard.py  observability.py  pii_redactor.py  prompt_manager.py  session_store.py
iis/core/guardrails/: config.yml  flows.co
iis/integrations/d365/: auth.py  config.py  discovery.py  metadata.py  router.py  schemas.py  service.py
iis/integrations/knowledge_hub/: service.py
iis/integrations/msgraph/: config.py  service.py
iis/integrations/servicenow/: auth.py  config.py  router.py  service.py
iis/integrations/workday/: auth.py  config.py  router.py  service.py
iis/mcp_registry/: d365.py  d365_fastapi.py  knowledge_hub.py  msgraph.py  servicenow.py  time_entry.py  workday.py
iis/mcp_servers/pricing/: __init__.py  config.yaml  server.py  test_tools.py
iis/mcp_servers/pricing/resources/: rate_cards.json  templates.json
iis/mcp_servers/pricing/tools/: __init__.py  rate_cards.py  ui_templates.py  validation.py
iis/prompts/: intent_detection.yaml  scope_classifier.yaml  system_persona.yaml  title_generator.yaml  ui_manifest_generator.yaml
iis/tests/: golden_dataset.json
librarian/: Dockerfile  README.md  diag.py  main.py  pyproject.toml
orchestrator/: .env.example  __init__.py  config.py  main.py  pyproject.toml  test_intent.py  test_llm.py  test_local_llm.py  test_security.py  test_ws_protocol.py  test_yaml_plan.py  ws_server.py
orchestrator/agents/: base.py  executor.py  planner.py
orchestrator/tools/: mcp_client.py
(+61 files in other folders)
