[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"

# SECURITY NOTE: glib 0.18.5 has GHSA-wrw7-89jp-8q8g (VariantStrIter unsoundness)
# This is a transitive dependency from tauri -> webkit2gtk-sys -> glib-sys -> glib
# The vulnerability requires use of VariantStrIter which is not used in this application.
# Upgrade to glib 0.20.0+ requires waiting for upstream tauri/gtk-rs ecosystem updates.
# Risk Assessment: LOW - vulnerable code path not used, monitoring for upstream fix.
